# pypulceq

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: Makefile  README.md  conf.py  example.ipynb  generate_benchmark.py  make.bat  pulceq_timing.mat  pypulceq_timing.mat
docs/comparison/cart_pytoppe/: cores.txt  module1.mod  module2.mod  module3.mod  module4.mod  module5.mod  module6.mod  modules.txt  seqstamp.txt  toppeN.entry
docs/comparison/cart_toppe/: cores.txt  module1.mod  module2.mod  module3.mod  module4.mod  module5.mod  module6.mod  modules.txt  seqstamp.txt  toppeN.entry
examples/: getting_started.ipynb  mprage.py
src/pypulceq/: __init__.py  _autosegment.py  _blocks.py  _ceq.py  _ceq2buffer.py  _ceq2files.py  _ceq2ge.py  _cli.py  _interp.py  _seq2buffer.py  _seq2ceq.py  _seq2files.py  _seq2ge.py  seq2ceq.py
src/pypulceq/_toppe/: __init__.py  _read.py  preflightcheck.py  systemspecs.py  utils.py  write.py  write2loop.py  writecoresfile.py  writeentryfile.py  writemod.py
src/pypulceq/demo/: __init__.py  cartesian_gre.py  noncartesian_gre.py
tests/: test_autosegment.py  test_ceq.py  test_pypulceq.py  test_seq2ceq.py  test_seq2ge.py
