[tool.poetry]
name = "pypulceq"
version = "0.1.0"
description = "Python tools to read and write Pulseq files for GEHC scanners (i.e., TOPPE interpreter)."
authors = ["Matteo Cencini"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
