[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pypulceq"
version = "0.0.1.alpha"
authors = [{name = "Matteo Cencini", email = "matteo.cencini@gmail.com"}]
description = "Python tools to read and write Pulseq files for GEHC scanners (i.e., TOPPE interpreter)."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["MRI", "GEHC", "Pulseq", "TOPPE"]
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "numpy", 
    "numba",
    "multiprocess",
    "click>=8.1",
    "pypulseq@git+https://github.com/INFN-PREDATOR/pypulseq.git@gehc", # until next pypulseq release
]

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.scripts]
seq2ge = "pypulceq._cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pypulceq*"]
exclude = ["pypulceq.tests*"]
namespaces = false